Fixed overlapping issue with .wrapper

--- a/style/index.css
+++ b/style/index.css
@@ -177,8 +177,8 @@ nav{
 }
 h2{
     color:#4f4f4f;
-    margin:1% auto 0;
-    padding-top:5%;
+    margin:2% auto 0;
+    padding-top:4%;
     text-align: center;
     font-size:4rem;
     font-family: 'Caveat', cursive;
